--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flip_card: ^0.7.0
+  velocity_x: ^3.6.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
