--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flip_card: ^0.7.0
   velocity_x: ^3.6.0
   google_fonts: ^4.0.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
